# project/project/laravel-password/routes/api.php
@@ -1,0 +1,28 @@
+<?php
+
+use Illuminate\Http\Request;
+
+/*
+|--------------------------------------------------------------------------
+| API Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register API routes for your application. These
+| routes are loaded by the RouteServiceProvider within a group which
+| is assigned the "api" middleware group. Enjoy building your API!
+|
+*/
+
+Route::middleware('auth:api')->get('/user', function (Request $request) {
+    return $request->user();
+});
+
+
+$api = app('Dingo\Api\Routing\Router');
+$api->version('v1', [
+    'namespace' => 'App\Http\Controllers',
+], function ($api) {
+    $api->get('auth/login', 'AuthController@login');
+//    $api->get('auth/login', 'AuthController@login');
+    $api->get('me', 'AuthController@me');
+});
